# ekonom

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
assets/interface/: app-sales_report.html  app.html
assets/interface/css/: common.css  sales_report.css
assets/interface/js/: comet-core.js
cmake/: App.cmake
src/: EkonomApp.cpp  EkonomApp.hpp  EkonomVersion.hpp.in  main.cpp
src/cxx/: EkonomApp.cpp  EkonomApp.hpp  main.cpp
src/cxx/cfg/: config_provider.cpp  config_provider.hpp
src/cxx/hlper/: console.hpp
src/cxx/sys/: table_processor.cpp  table_processor.hpp
src/defines/: defines.hpp
src/system/: FakturaIntegration.cpp  FakturaIntegration.hpp  ProfitIntegration.cpp  ProfitIntegration.hpp  SalesReport.cpp  SalesReport.hpp
src/web/: app-sales_report.html  app.html
src/web/css/: common.css  sales_report.css
src/winhlpr/: WinHlpr.hpp
